--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-client-create",
-  "version": "1.0.1",
-  "description": "This is a tool to create react scaffolding",
+  "version": "1.0.2",
+  "description": "This is a tool to create react apps",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
